application/kubechart/fend/deployment.yaml
# k8s/fend-vite.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: fend-vite
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fend-vite
  template:
    metadata:
      labels:
        app: fend-vite
    spec:
      containers:
        - name: fend-vite
          image: dmogki/fend-vite:v0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: fend-vite
  namespace: app
spec:
  selector:
    app: fend-vite
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
