application/kubechart/fend/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: fend-gateway
  namespace: app
spec:
  selector:
    istio: ingressgateway # mgmt 클러스터 ingress gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "fend.j1-lab.xyz"  # 네 도메인에 맞게 수정
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: fend-vs
  namespace: app
spec:
  hosts:
    - "fend.j1-lab.xyz"
  gateways:
    - fend-gateway
  http:
    - match:
        - uri:
            prefix: /otel/v1/traces
      rewrite:
        uri: /v1/traces
      route:
        - destination:
            host: otel-collector-opentelemetry-collector.tracing.svc.cluster.local
            port:
              number: 4318

    # - match:
    #     - uri:
    #         prefix: /api/info
    #   route:
    #     - destination:
    #         host: bend.app.svc.cluster.local
    #         port:
    #           number: 80

    - route:
        - destination:
            host: fend-vite.app.svc.cluster.local
            port:
              number: 80
